# FRIDAY-ML

./: README.md  pyproject.toml
.claude/: CLAUDE.md
.github/instructions/: friday.instructions.md
.github/prompts/: friday.prompt.md
notebooks/: ames-housing.py
